[B]1.0.3[/B]
- Fixed bug in request_loader basic authorization (IsPassword function)
- Pass through authorization in header in apache
- Added getinfo in basicwebaccess for holidays
- Changed Param parameter from getinfo to INFO

[B]1.0.2[/B]
- Edit date format in web interface
- Extended basicwebaccess with timers
- Extended basicwebaccess with 'all' information (including holidays)
- Extended basicwebaccess with device info
- Added timerrecalc to basicwebaccess
- Added status led on basicwebaccess
- Added log to basicwebaccess
- Updated memorylog to be able to get multiple read positions for logging (one read position for each webserver and one for basicwebaccess)
- Fixed logline scroller in web-interface with no new logline (need to refresh javascript, ctrl+F5 in chrome)
- Fixed bug on callbacks to engine
- Moved deleting of old holidays to Domotion instead of webserver

[B]1.0.1[/B]
- Small change on database updater to make it work for updating from 0.9.9 to 1.0.1
- Fixed bug in fixed db file in executable folder
- Fixed bug on Apache2 update location
- Fixed bug in basicwebaccess
- Fixed bug on webpage prefix for Apache2 deployment
- Fixed bug on logfile refresh on DomoWeb

[B]1.0.0[/B]
- Detached web application from Domotion application to be able to deploy externally and run multiple web applications simultaneously.
- Designed communication channel between Domotion and web app.
- Added script to run web applications during startup (however Domotion will work without any webapp running)
- Configure web applications with configuration file DomoWeb.xml (Removed SSL and port from settings)
- Adding configuration for deploying the webserver on Apache2
- Added script to easily setup Apache2 webserver(s) from DomoWeb.xml
- Added updater for database to automatically update the database on changes without loosing your setup or settings
- Updated install script
- Added prefix for web location
- Added possiblity to run scripts as actuator