@@ -11,10 +11,28 @@ function getLines() {
 function handleValues(resp) {
 	var values = JSON.parse(resp);
 	var logarea = document.getElementById('logarea');
+	AddtoLogArea(values.log);
+}
+
+function loadJSON(url, callback) {   
+	var xobj = new XMLHttpRequest();
+	xobj.overrideMimeType("application/json");
+	xobj.open('GET', url, true);
+	xobj.onreadystatechange = function () {
+		if (xobj.readyState == 4 && xobj.status == "200") {
+			callback(xobj.responseText);
+		} else if (xobj.status != "200") {
+			location.reload();
+		}
+	};
+	xobj.send(null);  
+}
+
+function AddtoLogArea(values) {
 	var i = 0;
 	var added = false;
-	for (i in values.log) {
-		logline = values.log[i];
+	for (i in values) {
+		logline = values[i];
 		if(logline.indexOf("\n")!=-1) {
 			if ((maxlines > 0) && (lines>=maxlines)) {
 				dlines = logarea.value.split("\n");
@@ -24,44 +42,30 @@ function handleValues(resp) {
 				lines += 1;
 				added = true;
 			}
-	    	logarea.value += values.log[i];
-	    }
+			logarea.value += values[i];
+		}
 	}
 	if ((added) && (document.getElementById('autoscroll').checked)) {
 		logarea.scrollTop = logarea.scrollHeight;
 	}
 }
 
-function loadJSON(url, callback) {   
-	var xobj = new XMLHttpRequest();
-	xobj.overrideMimeType("application/json");
-	xobj.open('GET', url, true);
-	xobj.onreadystatechange = function () {
-		if (xobj.readyState == 4 && xobj.status == "200") {
-    		callback(xobj.responseText);
-		} else if (xobj.status != "200") {
-      		location.reload();
-    	}
-	};
-	xobj.send(null);  
-}
-
 function Timer(Value) {
-  if (Value == 0) {
-    clearInterval(nIntervId);
-    TimerOn = 0;
-  } else if (Value == 1) {
-    clearInterval(nIntervId);
-    nIntervId = setInterval(getLines, 1000);
-    TimerOn = 1;
-  } else {
-    clearInterval(nIntervId);
-    nIntervId = setInterval(getLines, 1000);
-    TimerOn = 2;
-  }
+	if (Value == 0) {
+		clearInterval(nIntervId);
+		TimerOn = 0;
+	} else if (Value == 1) {
+		clearInterval(nIntervId);
+		nIntervId = setInterval(getLines, 1000);
+		TimerOn = 1;
+	} else {
+		clearInterval(nIntervId);
+		nIntervId = setInterval(getLines, 1000);
+		TimerOn = 2;
+	}
 }
 
-function OnLoadWindow(_maxlines, rt) {
+function OnLoadWindow(_maxlines, rt, stream) {
 	var logarea = document.getElementById('logarea');
 	route=rt;
 	if (document.getElementById('autoscroll').checked) {
@@ -69,6 +73,7 @@ function OnLoadWindow(_maxlines, rt) {
 	}
 	lines = logarea.value.split("\n").length;
 	maxlines = _maxlines;
+	AddtoLogArea(JSON.parse(stream));
 	Timer(1);
 }
 
