@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='js/utils_log.js') }}"></script>
   </head>
-  <body onload='OnLoadWindow({{lines}},"{{prefix}}")' onunload='OnUnloadWindow()'>
+  <body onload='OnLoadWindow({{lines}},"{{prefix}}",{{stream}})' onunload='OnUnloadWindow()'>
     <div style="font-size: small;">
-      <textarea readonly id="logarea" style="font-size: 12pt; width: 100%; height: 400px;">{{stream}}</textarea>
+      <textarea readonly id="logarea" style="font-size: 12pt; width: 100%; height: 400px;"></textarea>
       <label id="StatActive">
         <input type="checkbox" id="autoscroll" checked>
         Automatic scrolling
