@@ -1,3 +1,8 @@
+[B]1.0.4[/B]
+- Fixed bug in reading table columns from db, may confuse people when using basicwebaccess
+- Changed log data to JSON array format
+- Switched basicwebaccess getinfo and getall for logging
+
 [B]1.0.3[/B]
 - Fixed bug in request_loader basic authorization (IsPassword function)
 - Pass through authorization in header in apache
